infrastructure/common/influxdb/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: influxdb
  labels:
    app.kubernetes.io/name: influxdb
