infrastructure/common/influxdb/influxdb-stack.yaml
---
# Source: influxdb/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  labels:
    helm.sh/chart: influxdb-4.10.0
    app.kubernetes.io/name: influxdb
    app.kubernetes.io/instance: influxdb
    app.kubernetes.io/version: "1.8.6"
    app.kubernetes.io/managed-by: Helm
spec:
  type: LoadBalancer
  ports:
  - name: api
    port: 8086
    targetPort: api
  - name: rpc
    port: 8088
    targetPort: rpc
  selector:
    app.kubernetes.io/name: influxdb
    app.kubernetes.io/instance: influxdb
---
# Source: influxdb/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: influxdb
  labels:
    helm.sh/chart: influxdb-4.10.0
    app.kubernetes.io/name: influxdb
    app.kubernetes.io/instance: influxdb
    app.kubernetes.io/version: "1.8.6"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: influxdb
      app.kubernetes.io/instance: influxdb
  serviceName: "influxdb"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: influxdb
        app.kubernetes.io/instance: influxdb
#      annotations:
#        container.apparmor.security.beta.kubernetes.io/influxdb: localhost/k8s-apparmor-audit-writes
    spec:
      serviceAccountName: influxdb
      containers:
      - name: influxdb
        image: "influxdb:1.8.9"
        imagePullPolicy: "IfNotPresent"
        resources:
          {}
        ports:
        - name: api
          containerPort: 8086
        - name: rpc
          containerPort: 8088
        livenessProbe:
          httpGet:
            path: /ping
            port: api
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /ping
            port: api
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 1
        volumeMounts:
        - name: influxdb-data
          mountPath: /var/lib/influxdb
        - name: config
          mountPath: /etc/influxdb
      volumes:
      - name: config
        configMap:
          name: influxdb
      # Cannot use existing claim in enterprise mode
  # Must use volume claim template in enterprise mode
  volumeClaimTemplates:
    - metadata:
        name: influxdb-data
        annotations:
          volume.beta.kubernetes.io/storage-class: "managed-nfs-storage"
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
